--- a/index.htm
+++ b/index.htm
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>jsFirst</title>
 </head>
 <body>
     <h3>Programa de boas vindas</h3>
-    <script language="javascript">
+    <script id="idJs1" language="javascript">
         <!--
         /*objetivo: Capturar o nome do usuário e apresentar uma saudação personalizada
         Definir as variáveis com prefixo js_
@@ -18,6 +19,7 @@
         /* Definições de Variáveis */
 
     var jsNome;
+    console.log('jsNome');
 
     /* Entrada de dados */
     jsNome = window.prompt('Entre com o seu nome: ', 'Digite seu nome nesta caixa');
